--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 board_build.partitions = partitions.csv
 
 lib_deps =
